error4.log
    Checking fusion_lang v0.1.0 (C:\Projects\Fusion - Programming Language)
error[E0599]: no variant or associated item named `LogicalOr` found for enum `Token` in the current scope
   --> src\parser\mod.rs:205:34
    |
205 |         while self.check(&Token::LogicalOr) {
    |                                  ^^^^^^^^^ variant or associated item not found in `Token`
    |
   ::: src\lexer.rs:7:1
    |
  7 | pub enum Token {
    | -------------- variant or associated item `LogicalOr` not found for this enum

error[E0599]: no variant or associated item named `LogicalAnd` found for enum `Token` in the current scope
   --> src\parser\mod.rs:219:34
    |
219 |         while self.check(&Token::LogicalAnd) {
    |                                  ^^^^^^^^^^ variant or associated item not found in `Token`
    |
   ::: src\lexer.rs:7:1
    |
  7 | pub enum Token {
    | -------------- variant or associated item `LogicalAnd` not found for this enum

warning: unused variable: `name`
  --> src\semantic_analyzer\mod.rs:74:17
   |
74 |                 name,
   |                 ^^^^ help: try ignoring the field: `name: _`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0599`.
warning: `fusion_lang` (bin "fusion_lang") generated 1 warning
error: could not compile `fusion_lang` (bin "fusion_lang") due to 2 previous errors; 1 warning emitted
